// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/fleet-members/AreaForm Snapshots Default 1`] = `
<div
  class="container white"
>
  <form
    class="py-2"
  >
    <div
      class="flex xs12 px-2"
    >
      <div
        class="mb-2 text-uppercase grey--text font-weight-bold"
      >
        
      Area address
    
      </div>
       
      <div
        class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <input
                placeholder="Enter an address"
                type="text"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <div
                class="v-messages__wrapper"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="flex xs12 px-2"
    >
      <div
        class="text-uppercase grey--text font-weight-bold"
      >
        
      Radius
    
      </div>
       
      <div
        class="v-input v-input--slider v-input--slider--thumb-label theme--light"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-slider"
            >
              <input
                aria-readonly="false"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                readonly="readonly"
                role="slider"
                value="0"
              />
              <div
                class="v-slider__track__container"
              >
                <div
                  class="v-slider__track"
                  style="left: 7px; width: 100%;"
                />
                <div
                  class="v-slider__track-fill primary"
                  style="left: 0px; width: 0%;"
                />
              </div>
              <div
                class="v-slider__thumb-container v-slider__thumb-container--show-label"
                style="left: 0%;"
              >
                <div
                  class="v-slider__thumb"
                />
                <div
                  class="v-slider__thumb-label__container"
                  style="display: none;"
                >
                  <div
                    class="v-slider__thumb-label"
                    style="height: 32px; width: 32px;"
                  >
                    <span>
                      0
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-messages theme--light"
          >
            <span
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="flex xs12 pa-2"
    >
      <div
        class="text-xs-center"
      >
        
      MAP HERE
    
      </div>
    </div>
     
    <div
      class="layout align-center justify-space-between"
    >
      <button
        class="v-btn v-btn--disabled v-btn--depressed theme--light"
        disabled="disabled"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Cancel
    
        </div>
      </button>
       
      <button
        class="v-btn v-btn--depressed theme--light primary"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Save changes
    
        </div>
      </button>
    </div>
  </form>
</div>
`;

exports[`components/fleet-members/AreaForm Snapshots WithData 1`] = `
<div
  class="container"
>
  <form
    class="py-2"
  >
    <div
      class="flex xs12 px-2"
    >
      <div
        class="mb-2 text-uppercase grey--text font-weight-bold"
      >
        
      Area address
    
      </div>
       
      <div
        class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <input
                placeholder="Enter an address"
                type="text"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <div
                class="v-messages__wrapper"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="flex xs12 px-2"
    >
      <div
        class="text-uppercase grey--text font-weight-bold"
      >
        
      Radius
    
      </div>
       
      <div
        class="v-input v-input--slider v-input--slider--thumb-label theme--light"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-slider"
            >
              <input
                aria-readonly="false"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                readonly="readonly"
                role="slider"
                value="0"
              />
              <div
                class="v-slider__track__container"
              >
                <div
                  class="v-slider__track"
                  style="left: 7px; width: 100%;"
                />
                <div
                  class="v-slider__track-fill primary"
                  style="left: 0px; width: 0%;"
                />
              </div>
              <div
                class="v-slider__thumb-container v-slider__thumb-container--show-label"
                style="left: 0%;"
              >
                <div
                  class="v-slider__thumb"
                />
                <div
                  class="v-slider__thumb-label__container"
                  style="display: none;"
                >
                  <div
                    class="v-slider__thumb-label"
                    style="height: 32px; width: 32px;"
                  >
                    <span>
                      0
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-messages theme--light"
          >
            <span
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="flex xs12 pa-2"
    >
      <div
        class="text-xs-center"
      >
        
      MAP HERE
    
      </div>
    </div>
     
    <div
      class="layout align-center justify-space-between"
    >
      <button
        class="v-btn v-btn--disabled v-btn--depressed theme--light"
        disabled="disabled"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Cancel
    
        </div>
      </button>
       
      <button
        class="v-btn v-btn--depressed theme--light primary"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Save changes
    
        </div>
      </button>
    </div>
  </form>
</div>
`;
